refactor: update import statements and improve code formatting in database files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
 		"noImplicitOverride": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"exclude": ["**/dist/**", "**/node_modules/**", "**/examples/**"]
+	"exclude": ["**/dist/**", "**/node_modules/**", "**/examples/**", "undatabase"]
 }
