fix: add references section to tsconfig.json for undatabase package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,10 @@
 		"noImplicitOverride": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"exclude": ["**/dist/**", "**/node_modules/**", "**/examples/**", "undatabase"]
+	"exclude": ["**/dist/**", "**/node_modules/**", "**/examples/**", "undatabase"],
+	"references": [
+		{
+			"path": "./packages/undatabase"
+		},
+	]
 }
