Refactor tests and update import paths
- Removed the sign-up, sign-in, and session retrieval tests from the MSSQL adapter tests to streamline the test suite.
- Updated import paths in get-migration.ts to include the .ts extension for consistency.
- Changed the declaration of `toBeAddedFields` to use `const` instead of `let` for better code clarity.
- Reformatted the mssql field type assignment for improved readability.

--- a/undatabase/package.json
+++ b/undatabase/package.json
@@ -57,8 +57,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.14.1",
+    "better-sqlite3": "^11.9.1",
+    "deepmerge": "^4.3.1",
     "eslint": "^9.24.0",
+    "mysql2": "^3.14.0",
+    "tarn": "^3.0.2",
+    "tedious": "^18.6.1",
     "typescript": "^5.8.3",
     "unbuild": "^3.5.0",
     "vite-tsconfig-paths": "^5.1.4",
