--- a/undatabase/pnpm-workspace.yaml
+++ b/undatabase/pnpm-workspace.yaml
@@ -1,6 +1,5 @@
 packages: null
-ignoredBuiltDependencies:
-  - '@prisma/client'
-  - esbuild
 onlyBuiltDependencies:
+  - '@prisma/engines'
   - better-sqlite3
+  - prisma
